HelloUltraviolet/Fixtures/RejectedSource/Expressions/FloatLiteralExplicitRequirement/Expected.uv
//! Expected diagnostic metadata for the FloatLiteralExplicitRequirement rejected-source specimen.

expectedDiagnostic("E-TYP-1531", "rule.16.Chk-Float-Literal-Explicit")
